--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,13 @@ repository = "https://github.com/arnaucube/poseidon-rs"
 readme = "README.md"
 
 [dependencies]
-ff = {package="ff_ce" , version="0.11", features = ["derive"]}
+ff = { version = "0.11", features = ["derive"] }
 rand = "0.4"
 serde_json = "1.0"
 
 [dev-dependencies]
 criterion = "0.3"
+hex = "0.4"
 
 [[bench]]
 name = "bench_poseidon_hash"
